Basic settings for the project
I added basic settings for the  project

--- a/1.Static App/1.3. Page from class/index.html
+++ b/1.Static App/1.3. Page from class/index.html
@@ -1,14 +1,40 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/1.Static App/1.3. Page from class/styles.css">
-    <title>Document</title>
-</head>
-<body>
-    <div class="container">
-        
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="/1.Static App/1.3. Page from class/css/styles.css"
+    />
+    <title>Loruki | Cloude Housting For Everyone</title>
+    <!-- https://cdnjs.com/ -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <!-- Navbar  -->
+    <div class="navbar">
+      <div class="container">
+        <h1 class="logo">Loruki.</h1>
+        <nav>
+          <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="feature.html">Feature</a>
+            </li>
+            <li>
+                <a href="docs.html">Docs</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </div>
-</body>
+  </body>
 </html>
