--- a/1.Static App/1.3. Page from class/index.html
+++ b/1.Static App/1.3. Page from class/index.html
@@ -7,6 +7,10 @@
       rel="stylesheet"
       href="/1.Static App/1.3. Page from class/css/styles.css"
     />
+    <link
+    rel="stylesheet"
+    href="/1.Static App/1.3. Page from class/css/utilities.css"
+  />
     <title>Loruki | Cloude Housting For Everyone</title>
     <!-- https://cdnjs.com/ -->
     <link
@@ -19,22 +23,85 @@
   <body>
     <!-- Navbar  -->
     <div class="navbar">
-      <div class="container">
+      <div class="container flex">
         <h1 class="logo">Loruki.</h1>
         <nav>
           <ul>
             <li>
-                <a href="index.html">Home</a>
+              <a href="index.html">Home</a>
             </li>
             <li>
-                <a href="feature.html">Feature</a>
+              <a href="feature.html">Feature</a>
             </li>
             <li>
-                <a href="docs.html">Docs</a>
+              <a href="docs.html">Docs</a>
             </li>
           </ul>
         </nav>
       </div>
     </div>
+    <!-- Showcase -->
+    <section class="showcase">
+      <div class="container grid">
+        <div class="showcase-text">
+          <h1>Easier Deployment</h1>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Voluptatibus dolor ipsam nesciunt minima repellendus natus earum
+            iste, perferendis praesentium, explicabo impedit rem sed quisquam
+            nihil doloribus dicta repellat, quidem nam.
+          </p>
+          <a href="feature.html" class="btn btn-outline">Reade more ...</a>
+        </div>
+        <div class="showcase-form card">
+          <h2>Request a Demo</h2>
+          <form>
+            <div class="form-controle">
+              <input type="text" name="name" placeholder="Name" required />
+            </div>
+            <div class="form-controle">
+              <input
+                type="text"
+                name="compony"
+                placeholder="Compony Name"
+                required
+              />
+            </div>
+            <div class="form-controle">
+              <input type="email" name="email" placeholder="Email" required />
+            </div>
+            <input type="submit" value="Send" class="btn btn-primary" />
+          </form>
+        </div>
+      </div>
+    </section>
+    <!-- Stats  -->
+    <section class="stats">
+      <div class="container">
+        <h3 class="stats-heading text-center my-1">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus,
+          accusamus pariatur possimus molestiae tempore corrupti esse ullam
+          perspiciatis dicta facere reiciendis. Blanditiis accusantium deleniti
+          hic sit temporibus ipsam repudiandae ab.
+        </h3>
+        <div class="grid grid-3 text-center my-4">
+          <div>
+            <i class="fas fa-server fa-3x"> </i>
+            <h3>10,434,434</h3>
+            <p class="text-secondary">Deployments</p>
+          </div>
+          <div>
+            <i class="fas fa-upload fa-3x"> </i>
+            <h3>10,434 TB</h3>
+            <p class="text-secondary">Published</p>
+          </div>
+          <div>
+            <i class="fas fa-project-diagram fa-3x"> </i>
+            <h3>1043</h3>
+            <p class="text-secondary">Projects</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
