--- a/1.Static App/1.3. Page from class/index.html
+++ b/1.Static App/1.3. Page from class/index.html
@@ -8,9 +8,9 @@
       href="/1.Static App/1.3. Page from class/css/styles.css"
     />
     <link
-    rel="stylesheet"
-    href="/1.Static App/1.3. Page from class/css/utilities.css"
-  />
+      rel="stylesheet"
+      href="/1.Static App/1.3. Page from class/css/utilities.css"
+    />
     <title>Loruki | Cloude Housting For Everyone</title>
     <!-- https://cdnjs.com/ -->
     <link
@@ -78,7 +78,7 @@
     <!-- Stats  -->
     <section class="stats">
       <div class="container">
-        <h3 class="stats-heading text-center my-1">
+        <h3 class="stats-heading text-center">
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus,
           accusamus pariatur possimus molestiae tempore corrupti esse ullam
           perspiciatis dicta facere reiciendis. Blanditiis accusantium deleniti
@@ -103,5 +103,82 @@
         </div>
       </div>
     </section>
+    <!-- Cli -->
+    <section class="cli">
+      <div class="container grid">
+        <img src="img/cli.png" alt="" />
+        <div class="card card-cli">
+          <h3>Easy to use crossplatform CLI</h3>
+        </div>
+        <div class="card card-dep">
+          <h3>Deploy in seconds</h3>
+        </div>
+      </div>
+    </section>
+    <!-- Cloude -->
+    <section class="cloude bg-primary my-2 py-2">
+      <div class="container grid">
+        <div class="text-center">
+          <h2 class="lg">Extrime cloude hosting</h2>
+          <p class="leade my-1">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia
+            maiores molestiae voluptatibus nisi voluptas molestias quae optio,
+            sunt nihil odit, sequi similique neque voluptates, quam soluta.
+            Molestiae dolor culpa ratione.
+          </p>
+          <a href="feature.html" class="btn btn-dark">Reade more ...</a>
+        </div>
+        <img src="img/cloud.png" alt="">
+      </div>
+    </section>
+    <!-- Languages -->
+    <section class="lang">
+      <h2 class="md text-center my-2">
+        Supported languages
+      </h2>
+      <div class="container flex">
+        <div class="card">
+          <h4>Node.js</h4>
+          <img src="img/logos/node.png" alt="">
+        </div>
+        <!-- <div class="card">
+          <h4>Clojure</h4>
+          <img src="img/logos/clojure.png" alt="">
+        </div> -->
+        <div class="card">
+          <h4>Csharp</h4>
+          <img src="img/logos/csharp.png" alt="">
+        </div>
+        <div class="card">
+          <h4>Go</h4>
+          <img src="img/logos/go.png" alt="">
+        </div>
+        <div class="card">
+          <h4>PHP</h4>
+          <img src="img/logos/php.png" alt="">
+        </div>
+        <div class="card">
+          <h4>Python</h4>
+          <img src="img/logos/python.png" alt="">
+        </div>
+        <div class="card">
+          <h4>Ruby</h4>
+          <img src="img/logos/ruby.png" alt="">
+        </div>
+        <div class="card">
+          <h4>Scala</h4>
+          <img src="img/logos/scala.png" alt="">
+        </div>
+      </div>
+    </section>
+    <!-- Footer  -->
+    <footer class="footer bg-dark py-5">
+      <div class="container grid grid3">
+        <div>
+          <h1>Loruky</h1>
+          <p>Copyright &copy; 2021 </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
