--- a/1.Static App/1.3. Page from class/index.html
+++ b/1.Static App/1.3. Page from class/index.html
@@ -141,10 +141,10 @@
           <h4>Node.js</h4>
           <img src="img/logos/node.png" alt="">
         </div>
-        <!-- <div class="card">
+        <div class="card">
           <h4>Clojure</h4>
           <img src="img/logos/clojure.png" alt="">
-        </div> -->
+        </div>
         <div class="card">
           <h4>Csharp</h4>
           <img src="img/logos/csharp.png" alt="">
@@ -169,14 +169,59 @@
           <h4>Scala</h4>
           <img src="img/logos/scala.png" alt="">
         </div>
+        <div class="card">
+          <h4>Node.js</h4>
+          <img src="img/logos/node.png" alt="">
+        </div>
+        <div class="card">
+          <h4>Clojure</h4>
+          <img src="img/logos/clojure.png" alt="">
+        </div>
+        <div class="card">
+          <h4>Csharp</h4>
+          <img src="img/logos/csharp.png" alt="">
+        </div>
+        <div class="card">
+          <h4>Go</h4>
+          <img src="img/logos/go.png" alt="">
+        </div>
+        <div class="card">
+          <h4>PHP</h4>
+          <img src="img/logos/php.png" alt="">
+        </div>
+        <div class="card">
+          <h4>Python</h4>
+          <img src="img/logos/python.png" alt="">
+        </div>
       </div>
     </section>
     <!-- Footer  -->
     <footer class="footer bg-dark py-5">
-      <div class="container grid grid3">
-        <div>
+      <div class="container grid grid-3 grid-m">
+        <div class="f-logo">
           <h1>Loruky</h1>
           <p>Copyright &copy; 2021 </p>
+        </div>
+        <nav class="f-nav">
+          <ul>
+            <li>
+              <a href="index.html">Home</a>
+            </li>
+            <li>
+              <a href="feature.html">Feature</a>
+            </li>
+            <li>
+              <a href="docs.html">Docs</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="social">
+          <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+          <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+          <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+          <a href="#"><i class="fab fa-github fa-2x"></i></a>
+          <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
+          <a href="#"><i class="fab fa-google fa-2x"></i></a>
         </div>
       </div>
     </footer>
