--- a/1.Static App/1.4. CV_Page_1/index.html
+++ b/1.Static App/1.4. CV_Page_1/index.html
@@ -1,16 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- 
+    =====================    
+        Custome CSS
+    =====================
+    -->
+    <link rel="stylesheet" href="/1.Static App//1.4. CV_Page_1/style.css" />
+    <!-- 
+    =====================    
+        Google fonts 
+    =====================
+    -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-    rel="stylesheet"
-    href="/1.Static App//1.4. CV_Page_1/style.css"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap"
+      rel="stylesheet"
     />
+    <!-- 
+    =====================
+        Favicon 
+    =====================
+    -->
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <!-- 
+    =====================
+        AOS
+    =====================
+    -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- 
+    =====================
+        Glidejs
+    =====================
+    -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/css/glide.theme.min.css" rel="stylesheet">
     <title>CV</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <!-- 
+        Header
+    -->
+    <header id="header" class="header">
+        <div class="banner">
+            <!-- Navigation -->
+            <div class="navigation">
+                <nav class="nav container">
+                    <div class="nav__header">
+                        <div class="logo">
+                            <h1>SASHA</h1>
+                        </div>
+
+                        <div class="hamburger">
+                           <svg>
+                               <use xlink:href="./img/sprite.svg#icon-menu"></use>
+                           </svg> 
+                        </div>
+                    </div>
+                    <div class="nav__menu">
+                        <ul class="nav__list">
+                            <li class="nav__item">
+                                <a href="#header" class="nav__link scroll-link">Home</a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#about" class="nav__link scroll-link">About Me</a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#portfolio" class="nav__link scroll-link">Portfolio</a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#services" class="nav__link scroll-link">Services</a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#blog" class="nav__link scroll-link">Blog</a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#contacts" class="nav__link scroll-link">Contacts</a>
+                            </li>
+                        </ul>
+                        <ul class="social__menu">
+                            <li>
+                                <a href="">
+                                    <svg>
+                                        <use xlink:href="./img/sprite.svg#icon-facebook"></use>
+                                    </svg> 
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <svg>
+                                        <use xlink:href="./img/sprite.svg#icon-twitter"></use>
+                                    </svg> 
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <svg>
+                                        <use xlink:href="./img/sprite.svg#icon-instagram"></use>
+                                    </svg> 
+                                </a>
+                            </li>
+
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+
+
+    <!-- 
+    =====================
+        AOS
+    =====================
+    -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- 
+    =====================
+        Glidejs
+    =====================
+    -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/glide.min.js"></script>
+    <!-- 
+    =====================
+        Typeit
+    =====================
+    -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typeit/7.0.4/typeit.min.js" ></script>
+    <!-- 
+    =====================    
+        Custome JS
+    =====================
+    -->
+    <script src="/1.Static App/1.4. CV_Page_1/js/index.js" ></script>
+  </body>
 </html>
