--- a/1.Static App/1.4. CV_Page_1/index.html
+++ b/1.Static App/1.4. CV_Page_1/index.html
@@ -109,7 +109,25 @@
                 </nav>
             </div>
         </div>
+    <!-- 
+    =====================
+       Banner
+    =====================
+    -->
+    <div class="container">
+        <div class="banner">
+            <div class="banner__content">
+                <img src="./img2/1.jpg" alt="">
+            </div>
+        </div>
+    </div>
+
+        
     </header>
+
+
+
+    
 
 
 
